1999-07-22  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSMenuView.m: some fixes to get things to work correctly
	when calling menu item actions. Also autoenable should be working
	a little better.
	* Source/NSMenuItemCell.m: drawing fixes for disabled cells.

1999-07-20  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSMenuView.m: trackEvent: fixed problems that existed for
	NSPopUpButton. Should now work as desired. However, I believe I
	need to once again rewrite NSPopUp to make proper use of
	setMenu:, that will make the code sharing between NSMenu and
	NSPopUp complete.

	Also documented the event code a little. Interestingly enough by
	doing this I know what needs to be looked at better. Suprise,
	suprise.

1999-07-19  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSTableView.m: very incomplete implementation.
	* Source/NSTableColumn.m: mostly complete NSTableColumn
	implementation.
	* Source/NSTableHeaderView.m: some coding left when NSTableView
	works.
	* Source/NSTableHeaderCell.m: once all is drawing this should be
	corrected.

	None of this is built for good reason. The code is not finished,
	and the interfaces are not written. But committing them to CVS
	makes it much easier for me to develop on the multiple machines I
	use.

	* Source/GSServicesManager.m: removed NSMenuMatrix code. Should
	work properly now.
	* TODO: added the unimplemented classes TODO list.

1999-07-18  Michael Hanni  <mhanni@sprintmail.com>

	* Source/NSPopUpButtonCell.m: removed debug code. Makes
	popupbutton snappy not sloppy. ;-)

Sun Jul 18 16:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMenuView.m: When doing sizeToFit, use setContentSize to
	change the size of the window if we have one, rather than changing
	our frame directly.
	* Source/NSWindow.m: When adding a content view - don't set its
	autosizing mask.  In GSWindowView, don't use autosizing to change
	the content view - set it's frame directly instead.
